Bug 458297 - Form widgets and scrollbar should not be grayed when clicking on menus or dock stacks. r=smichaud, sr=roc, a191=beltzner